tests/paczka1/fuzzy1/50735088.err
Error in line 2: ewf S75 80,8
Error in line 8: ewf A227 50,8
Error in line 18: fYpA5 A509 -2,8
